# vademecum-germanicum

./: .env.example  CHANGELOG.md  CLAUDE.md  README.md  docker-compose.yml  justfile  main.py  migration.sql  pyproject.toml
.claude/: personal-planning-guidelines.md
.claude/1-add-word-enrichment/: rfc.md
.claude/2-improve-ui/: 29-palette-dark-mode-refinement.md
.claude/3-better-fields-structure/: 35-data-model-api.md  rfc.md
.claude/4-collapsable-cards/: 47-collapsible-verb-morphology-card.md  proposal.md
.claude/5-review-feature/: 56-learning-area-ui-senses-table-and-review-cart.md
.claude/6-improve-word-form-buttons-ux/: planning.md  rfc.md
.claude/7-add-sense-meaning-learning-area/: 71-sense-column-add-sense-column-to-senses-table.md
.claude/8-multiple-prepositions/: 76-schema-types.md  77-nested-field-arrays.md  78-enrichment-audit.md  planning.md  rfc.md
.claude/hotfix/64-hotfix-change-test-database/: hotfix-description.md  (+1 more)
.claude/planning/: PLANNING.md  backlog.md  project_phase_overview.md  sprint_1.md  sprint_2.md  sprint_3.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: feature_request.md
backend/: Dockerfile  README.md  pyproject.toml
backend/src/backend/: README.md  database.py  enrichment.py  main.py  models.py  schemas.py
backend/tests/: conftest.py  test_enrichment.py  test_senses.py  test_words.py
backend/tests/fixtures/: database_management.py  word_payloads.py
frontend/: README.md  package-lock.json  package.json
migrations/: add_sense_review_columns.sql
specs/claude/: planning_guidelines.md
(+53 files in other folders)
