[project]
name = "backend"
version = "0.2.8"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "Simone Porreca", email = "porrecasimone@gmail.com" }]
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.128.4",
    "httpx>=0.28.1",
    "litellm>=1.83.14",
    "psycopg2-binary>=2.9.11",
    "pydantic-ai>=1.66.0",
    "pytest>=9.0.2",
    "sqlalchemy>=2.0.46",
    "sqlmodel>=0.0.32",
    "uvicorn>=0.40.0",
]

[project.scripts]
backend = "backend:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
